Fixing z80 branch bug & making z80 emu work on linux